// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Accordion should render correctly by default 1`] = `
.c2 {
  font-size: 14px;
  font-family: "Montserrat",sans-serif;
  color: #FFFFFF;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  background-color: rgba(103,107,139,0.16);
  font-family: "Montserrat",sans-serif;
  border-radius: 4px;
  font-style: normal;
}

.c1 {
  padding: 16px;
  font-weight: 600;
}

.c1:hover {
  cursor: pointer;
}

.c3 {
  -webkit-transform: rotate( 360deg );
  -ms-transform: rotate( 360deg );
  transform: rotate( 360deg );
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

@media screen and (min-width:768px) {
  .c2 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    font-size: 16px;
  }
}

<div
  className="c0 css-nwbphr"
>
  <div
    className="c1 css-vpgf7p"
    onClick={[Function]}
  >
    <span
      className="c2"
      color="white"
      fontFamily="Montserrat"
      fontSize={
        Array [
          "s",
          "m",
          "m",
        ]
      }
    >
      title
    </span>
    <div
      className="c3 css-vurnku"
    />
  </div>
</div>
`;

exports[`Accordion Accordion should render correctly when expanded=true 1`] = `
.c4 {
  height: 1px;
  background-color: rgba(8,13,38,0.48);
}

.c2 {
  font-size: 14px;
  font-family: "Montserrat",sans-serif;
  color: #FFFFFF;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  background-color: rgba(103,107,139,0.16);
  font-family: "Montserrat",sans-serif;
  border-radius: 4px;
  font-style: normal;
}

.c1 {
  padding: 16px;
  font-weight: 600;
}

.c1:hover {
  cursor: pointer;
}

.c5 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #A7A7C8;
  font-weight: 500;
}

.c3 {
  -webkit-transform: rotate( 180deg );
  -ms-transform: rotate( 180deg );
  transform: rotate( 180deg );
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

@media screen and (min-width:768px) {
  .c2 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    padding-bottom: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c5 {
    padding-bottom: 24px;
  }
}

<div
  className="c0 css-nwbphr"
>
  <div
    className="c1 css-vpgf7p"
    onClick={[Function]}
  >
    <span
      className="c2"
      color="white"
      fontFamily="Montserrat"
      fontSize={
        Array [
          "s",
          "m",
          "m",
        ]
      }
    >
      title
    </span>
    <div
      className="c3 css-vurnku"
    />
  </div>
  <div
    className="c4"
    height={1}
  />
  <div
    className="c5 css-th0e4m"
  >
    Description
  </div>
</div>
`;

exports[`Accordion Accordion should render correctly when initiallyExpanded=true 1`] = `
.c4 {
  height: 1px;
  background-color: rgba(8,13,38,0.48);
}

.c2 {
  font-size: 14px;
  font-family: "Montserrat",sans-serif;
  color: #FFFFFF;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  background-color: rgba(103,107,139,0.16);
  font-family: "Montserrat",sans-serif;
  border-radius: 4px;
  font-style: normal;
}

.c1 {
  padding: 16px;
  font-weight: 600;
}

.c1:hover {
  cursor: pointer;
}

.c5 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #A7A7C8;
  font-weight: 500;
}

.c3 {
  -webkit-transform: rotate( 180deg );
  -ms-transform: rotate( 180deg );
  transform: rotate( 180deg );
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

@media screen and (min-width:768px) {
  .c2 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    padding-bottom: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c5 {
    padding-bottom: 24px;
  }
}

<div
  className="c0 css-nwbphr"
>
  <div
    className="c1 css-vpgf7p"
    onClick={[Function]}
  >
    <span
      className="c2"
      color="white"
      fontFamily="Montserrat"
      fontSize={
        Array [
          "s",
          "m",
          "m",
        ]
      }
    >
      title
    </span>
    <div
      className="c3 css-vurnku"
    />
  </div>
  <div
    className="c4"
    height={1}
  />
  <div
    className="c5 css-th0e4m"
  >
    Description
  </div>
</div>
`;
